deploy/salamander-showroom/manifests.yaml
---
# Source: showroom-single-pod/templates/proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showroom-factory
  namespace: showroom-factory
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: showroom-factory
---
# Source: showroom-single-pod/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showroom-factory
  namespace: showroom-factory
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: showroom-factory
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: showroom-factory
      annotations:
        checksum/traefik-static: a8de5299f7b2966e2852965185fbb2d4ffb2cc45860a59c4d61cac3b9e13214b
        checksum/traefik-dynamic: a02b0cc4b3df4346cc2c3a3fac2523acc477f0837e34b329349c36815722dec3
        checksum/userdata: 26bb9f7c2651a5737ef2c053c8806b5def0ec4e4f85135c1300fad5f7b649030
    spec:
      serviceAccountName: showroom-factory
      containers:
      - name: traefik
        image: "quay.io/rhpds/traefik:v3.7.9"
        imagePullPolicy: "IfNotPresent"
        args:
        - "--configFile=/etc/traefik/traefik.yml"
        volumeMounts:
        - mountPath: /etc/traefik/traefik.yml
          name: traefik-static
          subPath: traefik.yml
          readOnly: true
        - mountPath: /etc/traefik/dynamic.yml
          name: traefik-dynamic
          subPath: dynamic.yml
          readOnly: true
        ports:
        - name: web
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            cpu: 5m
            memory: 16Mi

      - name: content
        image: "quay.io/rhpds/showroom-content:v1.4.2"
        imagePullPolicy: "IfNotPresent"
        volumeMounts:
        - name: user-data
          mountPath: /user_data/
        - mountPath: /showroom/repo
          name: showroom-factory-files
          subPath: repo
        - mountPath: /showroom/www
          name: showroom-factory-files
          subPath: www
        ports:
        - containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
      - name: terminal
        image: "quay.io/rhpds/openshift-showroom-terminal-ocp:latest"
        imagePullPolicy: "IfNotPresent"
        volumeMounts:
        - name: terminal-lab-user-home
          mountPath: /home/lab-user
        - name: terminal-data-ssh # to enable ssh out of the container
          mountPath: /data/.ssh
        ports:
        - containerPort: 7681
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
      - name: wetty
        image: "quay.io/rhpds/wetty:v3.2.1"
        imagePullPolicy: "IfNotPresent"
        args:
        - --base="/wetty/"
        - --port=8001
        - --allow-iframe=true
        ports:
        - containerPort: 8001
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 500m
            memory: 256Mi

      volumes:
      - name: showroom-factory-files
        emptyDir: {}
      - name: user-data
        configMap:
          name: showroom-factory-userdata
      - name: traefik-static
        configMap:
          name: showroom-factory-traefik-static
      - name: traefik-dynamic
        configMap:
          name: showroom-factory-traefik-dynamic
      - name: terminal-data-ssh # to enable ssh out of the container
        emptyDir: {}
      - name: terminal-lab-user-home
        persistentVolumeClaim:
          claimName: showroom-factory-terminal-lab-user-home
---
# Source: showroom-single-pod/templates/proxy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: showroom-factory
  namespace: showroom-factory
  annotations:
    haproxy.router.openshift.io/timeout: 1h
    haproxy.router.openshift.io/timeout-tunnel: 1h
spec:
  to:
    kind: Service
    name: showroom-factory
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
